--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds001338.git
+	datalad-id = 52a237fa-8a33-11e8-8ba4-0242ac120024
+	datalad-url = https://github.com/OpenNeuroDatasets/ds001338.git
