[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds001338.git
 	datalad-id = 52a237fa-8a33-11e8-8ba4-0242ac120024
-	datalad-url = https://github.com/OpenNeuroDatasets/ds001338.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds001338
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
